# open-foi

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: README.md  esea_fetch_data_attachments.py  esea_hatecrime_2025.py
research/: foi-cli-api-research.md  legal-and-tos-analysis.md  semantic-search-feasibility.md
src/foi_cli/: __init__.py  browser.py  cache.py  cli.py  client.py  config.py  models.py  output.py  search.py
tests/: conftest.py  test_browser.py  test_cli.py  test_models.py  test_search.py
