[project]
name = "foi-cli"
version = "0.1.0"
description = "CLI tool for searching and viewing FOI requests on WhatDoTheyKnow.com"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40",
]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
foi = "foi_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foi_cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
